--- a/note-test-suite.html
+++ b/note-test-suite.html
@@ -1,12 +1,21 @@
 <html>
   <head>
+    <meta charset='UTF-8'>
+
+    <!-- Helper file -->
     <script src="spec/assert.js"></script>
-    <script src="lib/note-model.js"></script>
+
+    <!-- Source files -->
+    <script src="public/js/note-model.js"></script>
+    <script src="public/js/note-list-model.js"></script>
+    <script src="public/js/note-list-view.js"></script>
+    <script src="public/js/note-controller.js"></script>
+
+    <!-- Test files -->
     <script src="spec/note-test.js"></script>
-    <script src="lib/note-list-model.js"></script>
     <script src="spec/note-list-test.js"></script>
-    <script src="lib/note-list-view.js"></script>
     <script src="spec/note-list-view-test.js"></script>
+    <script src="spec/note-controller-test.js"></script>
   </head>
 
   <body>
