single note view complete

--- a/note-test-suite.html
+++ b/note-test-suite.html
@@ -10,12 +10,14 @@
     <script src="public/js/note-list-model.js"></script>
     <script src="public/js/note-list-view.js"></script>
     <script src="public/js/note-controller.js"></script>
+    <script src="public/js/single-note-view.js"></script>
 
     <!-- Test files -->
     <script src="spec/note-test.js"></script>
     <script src="spec/note-list-test.js"></script>
     <script src="spec/note-list-view-test.js"></script>
     <script src="spec/note-controller-test.js"></script>
+    <script src="spec/single-note-view-test.js"></script>
   </head>
 
   <body>
