basic form added to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,16 @@
   <script>
     const noteList = new NoteList();
     noteList.add('Hello Danny');
+    noteList.add('Hello Computer');
     const noteController = new NoteController(noteList);
     noteController.displayHtml();
   </script>
+  <form action="/page.js" method ="post" id="text">
+    <textarea name="Kimberley" form="text">You and whose Whatness?</textarea>
+    <div>
+    <input type="submit" value="Submit" >
+    </div<
+  </form>
+
 </body>
 </html>
